[tool.poetry]
name = "check-unifi"
version = "0.1.0"
description = "Check plugin for UniFi Network Application"
authors = ["Daniel Schade <mail@bashlover.de>"]
readme = "README.md"
packages = [{include = "check_unifi"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
